--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="../node_modules/primeui/themes/omega/theme.css" />
     <link rel="stylesheet" type="text/css" href="../node_modules/primeui/primeui-ng-all.min.css" />
+    <link rel="stylesheet" href="../src/public/css/components.css">
+    <link rel="stylesheet" href="../src/public/css/core.css">
+    <link rel="stylesheet" href="../src/public/css/pages.css">
+    <link rel="stylesheet" href="../src/public/css/icons.css">
 
         <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -20,4 +24,7 @@
   </body>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://use.fontawesome.com/7e11012892.js"></script>
+    <script src="waves.js"></script>
+    <script src="public/js/custom.js"></script>
 </html>
